# aircraft

./: .gitignore  Cargo.toml  igniter.config.mjs  package.json
.github/: CHANGELOG.md
docs/: README.md  myfile.txt
flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/: panel.cfg
src/instruments/src/EFB/Dashboard/Widgets/: FlightWidget.tsx
src/instruments/src/EFB/Presets/: Presets.tsx
src/instruments/src/EFB/Presets/Widgets/: AircraftPresets.tsx  LightPresets.tsx
src/instruments/src/EFB/Settings/Pages/: FlyPadPage.tsx
src/instruments/src/EFB/Utils/: MSFSFlightPlanLoader.ts
src/systems/a320_extra_backend/: Cargo.toml
src/systems/a320_extra_backend/src/: aircraft_presets.rs  aircraft_procedures.rs  extra_backend.rs  lib.rs
src/systems/a320_flypad_backend/: Cargo.toml
src/systems/a320_flypad_backend/src/: lib.rs
src/systems/a320_systems/: Cargo.toml
src/systems/a320_systems/src/: lib.rs  presets.rs
src/systems/a320_systems/src/flypad_backend/: .rustfmt.toml  aircraft_presets.rs  mod.rs
src/systems/a320_systems_wasm/src/: lib.rs
src/systems/systems_wasm/src/: lib.rs  presets.rs
