[package]
name = "a320_extra_backend"
version = "0.1.0"
authors = ["FlyByWire Simulations"]
edition = "2021"

[dependencies]
uom = "0.33.0"
rand = "0.8.0"
nalgebra = "0.25.0"
ntest = "0.7.2"
systems = { path = "../systems" }
systems_wasm = { path = "../systems_wasm" }
msfs = { git = "https://github.com/flybywiresim/msfs-rs", branch = "main" }

[dev-dependencies]
rstest = "0.10.0"
